--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   },
   "keywords": [],
   "author": "Jian LI",
-  "license": "MIT"
+  "license": "MIT",
   "homepage": "https://github.com/kenlee156/testpromisebyjian"
 }
