--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "testpromisebyjian",
   "version": "1.0.1",
   "description": "test PromiseJS without jQuery and other Framework",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.html"
   },
   "repository": {
     "type": "git",
