--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "test PromiseJS without jQuery and other Framework",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "index.html"
   },
   "repository": {
     "type": "git",
